tests/baselines/reference/importNonExportedMember8.errors.txt
b.js(1,10): error TS2598: 'Foo' can only be imported by using a 'require' call or by turning on the 'esModuleInterop' flag and using a default import.
b.js(1,21): error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.


==== a.ts (0 errors) ====
    class Foo {}
    export = Foo;
    
==== b.js (2 errors) ====
    import { Foo } from './a';
             ~~~
!!! error TS2598: 'Foo' can only be imported by using a 'require' call or by turning on the 'esModuleInterop' flag and using a default import.
                        ~~~~~
!!! error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.
    